--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,4 +19,5 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
+      run: apt install iperf3
       run: cargo test --verbose
