--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.39", features = ["derive"] }
+clap = { version = "4.5.39", features = ["derive"] }	# Command line argument parser
 cursive = "0.21.1"
 lazy_static = "1.4"
 nix = { version = "0.30.1", features = [ "term", "process", "signal" ] }
 regex = "1.11.1"
 rasciigraph = "0.2"
 timeout-readwrite = "0.4.0"
+termios = "0.3.3"
+reqwest = { version = "0.12.22", features = [ "blocking", "json" ] }
+dirs = "4.0"
+csv = "1.3.1"
