--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ regex = "1.11.1"
 rasciigraph = "0.2"
 timeout-readwrite = "0.4.0"
 termios = "0.3.3"
-reqwest = { version = "0.12.22", features = [ "blocking", "json" ] }
+reqwest = { version = "0.12.22", features = [ "blocking" ] }
 dirs = "4.0"
 csv = "1.3.1"
